<resources>

    <string name="app_name">Wallpapers</string>

    <string name="json_link">http://primudesigns.com/PrimU-walls/primu6.json</string>
    <string name="about">About</string>
    <string name="about_author">The following application is created by Sasikanth Miriyampalli</string>
    <string name="google">Google+</string>
    <string name="github">Github</string>
    <string name="twitter">Twitter</string>

    <string name="googlePlus">http://plus.google.com/+Sasikanth_</string>
    <string name="gitHub">https://github.com/sasikanth01</string>
    <string name="twitter_link">https://twitter.com/its_sasikanth</string>

</resources>
