<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:padding="24dp"
              android:minWidth="1000dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="?android:attr/textColorPrimary"
            android:layout_marginBottom="20dp"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_author"
            android:textSize="16sp"
            android:textColor="?android:attr/textColorPrimary"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="18dp">

        <TextView
                android:id="@+id/googlePlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foreground="?selectableItemBackgroundBorderless"
                android:paddingEnd="16dp"
                android:paddingStart="0dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:text="@string/google"/>

        <TextView
                android:id="@+id/gitHub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foreground="?selectableItemBackgroundBorderless"
                android:padding="16dp"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:text="@string/github"/>

        <TextView
                android:id="@+id/twitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foreground="?selectableItemBackgroundBorderless"
                android:padding="16dp"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:text="@string/twitter"/>

    </LinearLayout>


</LinearLayout>